--- a/todo.html
+++ b/todo.html
@@ -5,6 +5,6 @@
     <title>ToDo-Level</title>
 </head>
 <body>
-    <input type="checkbox" id="one" onchange="func()">
+    <input type="checkbox" id="one" onchange="fun1()">
 </body>
 </html>
